frontend/tests/cases/negative/tyConClash.gr
data Int where

data Float where

data () where

-- etc
